# django-template

./: LICENSE  README.md  pyproject.toml
.github/workflows/: backend,yml  backend.yml
anotacoes/: README.md
backend/: README.md  pyproject.toml
backend/config/: settings.py
backend/config/base/: apps.py  tests.py
backend/devpro/: settings.py
backend/projeto/: settings.py
backend/projeto/base/: apps.py  tests.py
