[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Template de projeto Django utilizando boas práticas"
authors = ["Vlamidir Serra <vladimirmaciel@gmail.com>"]
license = "NIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

# -- Example FILE: pyproject.toml
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projeto.settings"
# -- recommended but optional:
python_files = ["test*.py", "*test.py", "testing/python/*.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
