[tool.poetry]
name = "devpro-django-template"
version = "0.1.0"
description = "Template de projeto django com as boas praticas da DevPro"
authors = ["Vlamidir Serra <vladimirmaciel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
